--- a/myClippingsLibrary/clippingsParser/templates/clippingsParser/library.html
+++ b/myClippingsLibrary/clippingsParser/templates/clippingsParser/library.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>My test page</title>
+    <title>Kindle clippings manager</title>
   </head>
   <body>
     {% if books %}
