--- a/myClippingsLibrary/clippingsParser/templates/clippingsParser/index.html
+++ b/myClippingsLibrary/clippingsParser/templates/clippingsParser/index.html
@@ -10,7 +10,9 @@
     <ul>
       {% for library in librarys %}
       <li>
-        <a href="{% url 'library' library.title %}">{{ library.title }}</a>
+        <a href="{% url 'clippingsParser:library' library.title %}"
+          >{{ library.title }}</a
+        >
       </li>
       {% endfor %}
     </ul>
