added the list of clippings in the book view

--- a/backend/clippingsParser/templates/clippingsParser/book.html
+++ b/backend/clippingsParser/templates/clippingsParser/book.html
@@ -7,6 +7,17 @@
   <body>
     {% if title %}
     <p>{{ title }}{% if author %} written by {{ author }}{% endif %}</p>
+    {% if clippings %}
+    <ul>
+      {% for clip in clippings %}
+      <li>
+        {{ clip.content }} <br />Location in the book {{ clip.book_location }}
+      </li>
+      {% endfor %}
+    </ul>
+    {% else %}
+    <p>You don't have any clippings saved in this book.</p>
+    {% endif %}
     <p>
       This book is stored in this library :
       <a href="{% url 'clippingsParser:library' library_title %}"
