adding a form to upload the clippings.txt

--- a/backend/clippingsParser/templates/clippingsParser/index.html
+++ b/backend/clippingsParser/templates/clippingsParser/index.html
@@ -5,6 +5,11 @@
     <title>Kindle clippings manager</title>
   </head>
   <body>
+    <form enctype="multipart/form-data" action="{% url 'clippingsParser:index' %}" method="post">
+      {% csrf_token %}
+      <input type="file" name="clippings" />
+      <button type="submit">Upload</button>
+    </form>
     {% if librarys %}
     <p>All the available librarys :</p>
     <ul>
