--- a/backend/clippingsParser/templates/clippingsParser/index.html
+++ b/backend/clippingsParser/templates/clippingsParser/index.html
@@ -1,28 +1,26 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8" />
-    <title>Kindle clippings manager</title>
-  </head>
-  <body>
-    <form enctype="multipart/form-data" action="{% url 'clippingsParser:index' %}" method="post">
-      {% csrf_token %}
-      <input type="file" name="clippings" />
-      <button type="submit">Upload</button>
-    </form>
-    {% if librarys %}
-    <p>All the available librarys :</p>
-    <ul>
-      {% for library in librarys %}
-      <li>
-        <a href="{% url 'clippingsParser:library' library.title %}"
-          >{{ library.pk }} - {{ library.title }}</a
-        >
-      </li>
-      {% endfor %}
-    </ul>
-    {% else %}
-    <p>You need to create your first Library</p>
-    {% endif %}
-  </body>
-</html>
+{% extends "base.html" %}
+
+{% block content %}
+  <form
+    enctype="multipart/form-data"
+    action="{% url 'clippingsParser:index' %}"
+    method="post"
+  >
+    {% csrf_token %} {{ form }}
+    <button type="submit">Upload</button>
+  </form>
+  {% if librarys %}
+  <p>All the available librarys :</p>
+  <ul>
+    {% for library in librarys %}
+    <li>
+      <a href="{% url 'clippingsParser:library' library.title %}"
+        >{{ library.pk }} - {{ library.title }}</a
+      >
+    </li>
+    {% endfor %}
+  </ul>
+  {% else %}
+  <p>You need to create your first Library</p>
+  {% endif %}
+{% endblock %}
