--- a/backend/clippingsParser/templates/clippingsParser/library.html
+++ b/backend/clippingsParser/templates/clippingsParser/library.html
@@ -5,9 +5,9 @@
   <ul>
     {% for book in books %}
     <li>
-      <a href="{% url 'clippingsParser:book' book.id %}"
-        >{{ book.title }} - {{ book.author }}</a
-      >
+      <a href="{% url 'clippingsParser:book' book.id %}">
+        {{ book.title }} - {{ book.author }}
+      </a>
     </li>
     {% endfor %}
   </ul>
