Updating website title depending on the context

--- a/backend/clippingsParser/templates/base.html
+++ b/backend/clippingsParser/templates/base.html
@@ -6,7 +6,7 @@
     <meta name="description" content="">
     <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
     <meta name="generator" content="Jekyll v4.1.1">
-    <title>Clippings Summarizer</title>
+    <title>{% block title %}Clippings Summarizer{% endblock %}</title>
 
     <link rel="canonical" href="https://getbootstrap.com/docs/4.5/examples/navbar-static/">
 
@@ -34,7 +34,7 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-md navbar-dark bg-dark mb-4">
-  <a class="navbar-brand" href="#">Top navbar</a>
+  <a class="navbar-brand" href="#"></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
